syntax = "proto3";
package messages;
option go_package = "./messages";

message Config {
  string root_snap_path = 1;
  repeated string subvol_paths = 2;
}

